# psx-mcp

./: .gitignore  LICENSE  README.md  claude_desktop_config.json  cursor_mcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml
src/psx_mcp/: __init__.py  dividend_calc.py  scraper.py  server.py
tests/: test_smoke.py
